Prevent a scrollbar from appearing when a viewer is placed in its own tab

--- a/src/themes/atomic-light-ui/main-ui.scss
+++ b/src/themes/atomic-light-ui/main-ui.scss
@@ -67,8 +67,9 @@
 DIV.tab_content {
   height: 100%;
   width: 100%;
-
+  position: relative;
 }
+
 DIV.tab_content > * {
   position: absolute;
   width: 100%;
