--- a/src/themes/default/main-ui.scss
+++ b/src/themes/default/main-ui.scss
@@ -73,8 +73,9 @@
 DIV.tab_content {
   height: 100%;
   width: 100%;
-
+  position: relative;
 }
+
 DIV.tab_content > * {
   position: absolute;
   width: 100%;
